--- a/index.html
+++ b/index.html
@@ -53,6 +53,54 @@
                 </div>
             </div>
         </nav>
+        <section class="hero-section my-5">
+            <div class="container">
+                <div class="row">
+                    <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="false">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block col-12 col-md-8 col-lg-6 mx-auto">
+                              <h5>Get Started Digital Learning</h5>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+                              <div class="btn-area">
+                                <a class="btn btn-accent" href="#" role="button">Link</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block col-12 col-md-8 col-lg-6 mx-auto">
+                              <h5>Second slide label</h5>
+                              <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block col-12 col-md-8 col-lg-6 mx-auto">
+                              <h5>Third slide label</h5>
+                              <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
+            </div>
+        </section>
     </header>
     <!-- End Header area -->
     <main>
@@ -62,10 +110,10 @@
 <footer class="bg-dark text-white py-5">
     <div class="container-fluid">
         <div class="d-flex flex-column justify-content-center align-content-center text-center py-5">
-            <div class="fo-title">
+            <div class="fo-title py-3">
                 <h3>Learn With Kabir</h3>
             </div>
-    <div class="copywrite-text">
+    <div class="copywrite-text py-3">
         <p>Office 41, Zawaya Buildin, Ghala Muscat, 
             Sultanate of Oman</p>
         <p>Copyright © 2020   
