--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="favicon/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/7e90618c39.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -44,7 +45,7 @@
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                     <div class="d-flex">
@@ -65,28 +66,36 @@
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block col-12 col-md-8 col-lg-6 mx-auto">
+                            <div class="carousel-caption col-10 col-md-8 col-lg-6 mx-auto  ">
                               <h5>Get Started Digital Learning</h5>
                               <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
 
                               <div class="btn-area">
-                                <a class="btn btn-accent" href="#" role="button">Link</a>
+                                <a class="btn bg-accent text-white p-lg-3" href="#" role="button">Get Started</a>
                               </div>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block col-12 col-md-8 col-lg-6 mx-auto">
-                              <h5>Second slide label</h5>
-                              <p>Some representative placeholder content for the second slide.</p>
-                            </div>
+                            <div class="carousel-caption col-10 col-md-8 col-lg-6 mx-auto  ">
+                                <h5>Get Started Digital Learning</h5>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+  
+                                <div class="btn-area">
+                                  <a class="btn bg-accent text-white p-lg-3" href="#" role="button">Get Started</a>
+                                </div>
+                              </div>
                           </div>
                           <div class="carousel-item">
                             <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block col-12 col-md-8 col-lg-6 mx-auto">
-                              <h5>Third slide label</h5>
-                              <p>Some representative placeholder content for the third slide.</p>
-                            </div>
+                            <div class="carousel-caption col-10 col-md-8 col-lg-6 mx-auto  ">
+                                <h5>Get Started Digital Learning</h5>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+  
+                                <div class="btn-area">
+                                  <a class="btn bg-accent text-white p-lg-3" href="#" role="button">Get Started</a>
+                                </div>
+                              </div>
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
@@ -121,10 +130,10 @@
             <p>All rights reserved</p>
     </div>
     <div class="social-link">
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-dribbble"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://www.instagram.com/sahariar__kabir/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://dribbble.com/sahariark"><i class="fa-brands fa-dribbble"></i></a>
+        <a href="https://twitter.com/Sahariar__Kabir"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCAGSel7RJBUD-mx8zAOjSxA"><i class="fa-brands fa-youtube"></i></a>
     </div>
 </div>
 </div>
