--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
     <!-- Start Header area -->
-    <header class="header-area py-3">
+    <header class="header-area pt-3 mb-130">
+          <!-- start nav -->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand h1" href="#">LW Kabir</a>
@@ -54,6 +55,8 @@
                 </div>
             </div>
         </nav>
+        <!-- end nav -->
+           <!-- Start hero-section -->
         <section class="hero-section my-5">
             <div class="container">
                 <div class="row">
@@ -67,8 +70,8 @@
                           <div class="carousel-item active">
                             <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption col-10 col-md-8 col-lg-6 mx-auto  ">
-                              <h5>Get Started Digital Learning</h5>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <h5>Get Started with CSS Frameworks</h5>
+                              <p>Top CSS Frameworks offer lots of advantages like speeding up your development process, better cross-browser functionality and More.</p>
 
                               <div class="btn-area">
                                 <a class="btn bg-accent text-white p-lg-3" href="#" role="button">Get Started</a>
@@ -78,8 +81,8 @@
                           <div class="carousel-item">
                             <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption col-10 col-md-8 col-lg-6 mx-auto  ">
-                                <h5>Get Started Digital Learning</h5>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <h5>Get Started with Javascript</h5>
+                                <p>JavaScript is the world's most popular programming language. JavaScript is the programming language of the Web. JavaScript is easy to learn.</p>
   
                                 <div class="btn-area">
                                   <a class="btn bg-accent text-white p-lg-3" href="#" role="button">Get Started</a>
@@ -110,9 +113,215 @@
                 </div>
             </div>
         </section>
+            <!-- end hero-section -->
     </header>
     <!-- End Header area -->
     <main>
+        <!-- Start course area -->
+        <section class="course-area mb-130">
+            <div class="container">
+                <div class="row text-center mb-5">
+                    <div class="col-lg-5 mx-auto">
+                    <div class="section-title">
+                        <h2>Discover Our Popular Courses</h2>
+                    </div>
+                    <div class="section-info">
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    </div>
+                </div>
+                </div>
+                <!-- course list area -->
+                <div class="course-list-area">
+                    <div class="row">
+                        <!-- course info area -->
+                        <div class="col-lg-6 col-md-12">
+                            <div class="d-flex">
+                                <div class="course-area d-flex flex-row align-items-center rounded-4 m-2 border border-1">
+                                    <div class="icon-area">
+                                        <img src="images/course/course-1.png" alt="">
+                                    </div>
+                                    <div class="course-info px-3">
+                                        <div class="course-title">
+                                            <h4>Fundamental Of UI/UX Design</h4>
+                                        </div>
+                                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                        <div class="price ">
+                                            <p class="font-accent-color">Price : 20$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                         <!--end course info area -->
+                         <!-- course info area -->
+                        <div class="col-lg-6 col-md-12">
+                            <div class="d-flex">
+                                <div class="course-area d-flex flex-row align-items-center rounded-4 m-2 border border-1">
+                                    <div class="icon-area">
+                                        <img src="images/course/course-2.png" alt="">
+                                    </div>
+                                    <div class="course-info px-3">
+                                        <div class="course-title">
+                                            <h4>Javascript Basic to advanced</h4>
+                                        </div>
+                                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                        <div class="price font-accent-color">
+                                            <p>Price : 20$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                         <!--end course info area -->
+                        
+                    </div>
+                    <div class="row">
+                         <!-- course info area -->
+                        <div class="col-lg-6 col-md-12">
+                            <div class="d-flex">
+                                <div class="course-area d-flex flex-row align-items-center rounded-4 m-2 border border-1">
+                                    <div class="icon-area">
+                                        <img src="images/course/course-3.png" alt="">
+                                    </div>
+                                    <div class="course-info px-3">
+                                        <div class="course-title">
+                                            <h4>Fullstack Web Development</h4>
+                                        </div>
+                                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                        <div class="price ">
+                                            <p class="font-accent-color">Price : 20$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                         <!--end course info area -->
+                         <!-- course info area -->
+                        <div class="col-lg-6 d-md-none d-lg-block">
+                            <div class="d-flex">
+                                <div class="course-area d-flex flex-row align-items-center rounded-4 m-2 border border-1">
+                                    <div class="icon-area">
+                                        <img src="images/course/course-4.png" alt="">
+                                    </div>
+                                    <div class="course-info px-3">
+                                        <div class="course-title">
+                                            <h4>Digital Marketing</h4>
+                                        </div>
+                                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                        <div class="price font-accent-color">
+                                            <p>Price : 20$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--end course info area -->
+                    </div>
+                    
+                    <div class="row">
+                         <!-- course info area -->
+                        <div class="col-lg-6 d-md-none d-lg-block">
+                            <div class="d-flex">
+                                <div class="course-area d-flex flex-row align-items-center rounded-4 m-2 border border-1">
+                                    <div class="icon-area">
+                                        <img src="images/course/course-5.png" alt="">
+                                    </div>
+                                    <div class="course-info px-3">
+                                        <div class="course-title">
+                                            <h4>Photography Basic Rules</h4>
+                                        </div>
+                                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                        <div class="price ">
+                                            <p class="font-accent-color">Price : 20$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                           <!--end course info area -->
+                         <!-- course info area -->
+                        <div class="col-lg-6 col-md-12 d-md-none d-lg-block">
+                            <div class="d-flex">
+                                <div class="course-area d-flex flex-row align-items-center rounded-4 m-2 border border-1">
+                                    <div class="icon-area">
+                                        <img src="images/course/course-6.png" alt="">
+                                    </div>
+                                    <div class="course-info px-3">
+                                        <div class="course-title">
+                                            <h4>Motion Graphics</h4>
+                                        </div>
+                                        <p>Some quick example text to build on the card title and make up the bulk of the card.</p>
+                                        <div class="price font-accent-color">
+                                            <p>Price : 20$</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                            <!--end course info area -->
+                    </div>
+                    <div class="text-center mt-5">
+                        <div class="btn-area">
+                            <a class="btn bg-accent text-white p-lg-3" href="#" role="button">See More Courses</a>
+                          </div>
+                    </div>
+                </div>
+                 <!-- course list area -->
+            </div>
+        </section>
+        <!-- end course area -->
+            <section class="ex-elearning-area mb-130">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-5">
+                            <div class="elearimgarea">
+                                <img src="images/working.png" alt="images area" class="">
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-7 elear-info align-items-center d-flex">
+                                <div class="p-md-5">
+                                    <div class="section-title">
+                                        <h2>Explore The elearning Institute</h2>
+                                    </div>
+                                    <div class="section-info mb-3">
+                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+                                        <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+                                    </div>
+                                    <div class="d-flex flex-wrap justify-content-around">
+                                        <div class="info">
+                                            <div class="section-title">
+                                                <h2>3.2K+</h2>
+                                            </div>
+                                            <div class="section-info">
+                                                <p>Online Course</p>
+                                            </div>
+                                        </div>
+                                        <div class="info">
+                                            <div class="section-title">
+                                                <h2>600+</h2>
+                                            </div>
+                                            <div class="section-info">
+                                                <p>Expert member</p>
+                                            </div>
+                                        </div>
+                                        <div class="info">
+                                            <div class="section-title">
+                                                <h2>1k+</h2>
+                                            </div>
+                                            <div class="section-info">
+                                                <p>Rating & Review</p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="btn-area">
+                                        <a class="btn bg-accent text-white p-lg-3" href="#" role="button">Read More</a>
+                                      </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
     </main>
 <!-- Start footer -->
