added faq section

--- a/index.html
+++ b/index.html
@@ -544,16 +544,14 @@
                                         </div>
                                         <p class="text-muted">
                                             <i class="fas fa-quote-left pe-2"></i>
-                                            "If you aren't sure, always go for course. I would also like to say thank
-                                            you to all your staff. This is simply unbelievable! The course was the best
-                                            investment I ever made."
+                                            "Web developement is exactly what our business has been lacking. You've saved our business! Needless to say we are extremely satisfied with the results."
                                         </p>
                                         <div class="d-flex">
                                             <img class="rounded-circle shadow-1-strong mb-4"
-                                                src="images/student/student-5.png" alt="avatar" />
+                                                src="images/student/student-7.png" alt="avatar" />
                                             <div class="avatarinfo px-3">
-                                                <h5 class="mb-0">Awlad Hossain</h5>
-                                                <p>UI Designer</p>
+                                                <h5 class="mb-0">Kenneth L</h5>
+                                                <p>Ux Researcher</p>
                                             </div>
                                         </div>
                                     </div>
@@ -574,16 +572,14 @@
                                         </div>
                                         <p class="text-muted">
                                             <i class="fas fa-quote-left pe-2"></i>
-                                            "I couldn't have asked for more than this. Thanks for the great service. I
-                                            am really satisfied with my course. Course is the most valuable business
-                                            resource we have EVER purchased."
+                                            "Thank you for making it painless, pleasant and most of all hassle free! Thanks guys, keep up the good work! I like Web developement more and more each day because it makes my life a lot easier"
                                         </p>
                                         <div class="d-flex">
                                             <img class="rounded-circle shadow-1-strong mb-4"
-                                                src="images/student/student-6.png" alt="avatar" />
+                                                src="images/student/student-8.png" alt="avatar" />
                                             <div class="avatarinfo px-3">
-                                                <h5 class="mb-0">Shanta Akter</h5>
-                                                <p>Graphic Designer</p>
+                                                <h5 class="mb-0">Sander I.</h5>
+                                                <p>Front End Designer</p>
                                             </div>
                                         </div>
                                     </div>
@@ -611,16 +607,14 @@
                                         </div>
                                         <p class="text-muted">
                                             <i class="fas fa-quote-left pe-2"></i>
-                                            "If you aren't sure, always go for course. I would also like to say thank
-                                            you to all your staff. This is simply unbelievable! The course was the best
-                                            investment I ever made."
+                                            "Web developement is worth much more than I paid. Thanks to Web developement , we've just launched our 5th website! Web developement impressed me on multiple levels."
                                         </p>
                                         <div class="d-flex">
                                             <img class="rounded-circle shadow-1-strong mb-4"
-                                                src="images/student/student-5.png" alt="avatar" />
+                                                src="images/student/student-9.png" alt="avatar" />
                                             <div class="avatarinfo px-3">
-                                                <h5 class="mb-0">Awlad Hossain</h5>
-                                                <p>UI Designer</p>
+                                                <h5 class="mb-0"> Blinny X.</h5>
+                                                <p>Web Developer</p>
                                             </div>
                                         </div>
                                     </div>
@@ -641,16 +635,14 @@
                                         </div>
                                         <p class="text-muted">
                                             <i class="fas fa-quote-left pe-2"></i>
-                                            "I couldn't have asked for more than this. Thanks for the great service. I
-                                            am really satisfied with my course. Course is the most valuable business
-                                            resource we have EVER purchased."
+                                            "Web developement is both attractive and highly adaptable. We're loving it. I am so pleased with this product. Definitely worth the investment."
                                         </p>
                                         <div class="d-flex">
                                             <img class="rounded-circle shadow-1-strong mb-4"
-                                                src="images/student/student-6.png" alt="avatar" />
+                                                src="images/student/student-10.png" alt="avatar" />
                                             <div class="avatarinfo px-3">
-                                                <h5 class="mb-0">Shanta Akter</h5>
-                                                <p>Graphic Designer</p>
+                                                <h5 class="mb-0">Nat J</h5>
+                                                <p>Web Designer</p>
                                             </div>
                                         </div>
                                     </div>
@@ -662,7 +654,7 @@
                 </div>
                 <!-- Inner -->
                 <!-- Controls -->
-                <div class="d-flex justify-content-center mb-4">
+                <div class="d-flex justify-content-between mb-4 carousel-feedback">
                     <button class="carousel-control-prev position-relative" type="button"
                         data-bs-target="#feedbackCarousel" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -678,6 +670,78 @@
             <!-- Carousel wrapper -->
         </section>
         <!-- End Feedback Section  -->
+        <!-- Start FAQ Section  -->
+        <section class="faqsec mb-130">
+            <div class="container">
+                <div class="row text-center mb-5">
+                    <div class="col-lg-7 mx-auto">
+                        <div class="section-title mb-3">
+                            <h2>Frequently Asked Questions</h2>
+                        </div>
+                        <div class="section-info accent-text">
+                            <p>It is a long established fact that a reader will be distracted by the readable content of
+                                a page when looking at its layout.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-7 mx-auto">
+                        <div class="accordion" id="faqInfo">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button p-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What is the difference between flexbox and Grid ?
+                                </button>
+                              </h2>
+                              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqInfo">
+                                <div class="accordion-body">
+                                  Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility while working on either element (row or column). HTML markup and CSS will be easy to manage in this type of scenario.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Difference between bootstrap and tailwind ?
+                                </button>
+                              </h2>
+                              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqInfo">
+                                <div class="accordion-body">
+                                    Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that makes them look identical.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is CSS box model?
+                                </button>
+                              </h2>
+                              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqInfo">
+                                <div class="accordion-body">
+                                    The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingfour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                                    What is a semantic tag?
+                                </button>
+                              </h2>
+                              <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour" data-bs-parent="#faqInfo">
+                                <div class="accordion-body">
+                                    The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <!-- End FAQ Section  -->
     </main>
     <!-- Start footer -->
     <footer class="bg-dark text-white py-5">
