update respnsive with other things

--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
                                     <div class="icon-area">
-                                        <img src="images/course/course-1.png" alt="" class="img-md-fluid">
+                                        <img src="images/course/course-1.png" alt="" class="d-none d-md-block">
+                                        <img src="images/mcourse-1.png" alt="" class="d-block d-md-none">
                                     </div>
-                                    <div class="course-info px-3">
+                                    <div class="course-info px-3 py-4">
                                         <div class="course-title">
                                             <h4>Fundamental Of UI/UX Design</h4>
                                         </div>
@@ -173,9 +174,10 @@
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
                                     <div class="icon-area">
-                                        <img src="images/course/course-2.png" alt="" class="img-md-fluid">
+                                        <img src="images/course/course-2.png" alt="" class="d-none d-md-block">
+                                        <img src="images/mcourse-2.png" alt="" class="d-block d-md-none">
                                     </div>
-                                    <div class="course-info px-3">
+                                    <div class="course-info px-3 py-4">
                                         <div class="course-title">
                                             <h4>Javascript Basic to advanced</h4>
                                         </div>
@@ -198,9 +200,10 @@
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
                                     <div class="icon-area">
-                                        <img src="images/course/course-3.png" alt="" class="img-md-fluid">
+                                        <img src="images/course/course-3.png" alt="" class="d-none d-md-block">
+                                        <img src="images/mcourse-3.png" alt="" class="d-block d-md-none">
                                     </div>
-                                    <div class="course-info px-3">
+                                    <div class="course-info px-3 py-4">
                                         <div class="course-title">
                                             <h4>Fullstack Web Development</h4>
                                         </div>
@@ -215,14 +218,14 @@
                         </div>
                         <!--end course info area -->
                         <!-- course info area -->
-                        <div class="col-lg-6 d-md-none d-lg-block">
+                        <div class="col-lg-6 d-none d-lg-block">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
                                     <div class="icon-area">
                                         <img src="images/course/course-4.png" alt="" class="img-md-fluid">
                                     </div>
-                                    <div class="course-info px-3">
+                                    <div class="course-info px-3 py-4">
                                         <div class="course-title">
                                             <h4>Digital Marketing</h4>
                                         </div>
@@ -240,14 +243,14 @@
 
                     <div class="row">
                         <!-- course info area -->
-                        <div class="col-lg-6 d-md-none d-lg-block">
+                        <div class="col-lg-6 d-none d-lg-block">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
                                     <div class="icon-area">
                                         <img src="images/course/course-5.png" alt="" class="img-md-fluid">
                                     </div>
-                                    <div class="course-info px-3">
+                                    <div class="course-info px-3 py-4">
                                         <div class="course-title">
                                             <h4>Photography Basic Rules</h4>
                                         </div>
@@ -262,14 +265,14 @@
                         </div>
                         <!--end course info area -->
                         <!-- course info area -->
-                        <div class="col-lg-6 col-md-12 d-md-none d-lg-block">
+                        <div class="col-lg-6 col-md-12 d-none d-lg-block">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
                                     <div class="icon-area">
                                         <img src="images/course/course-6.png" alt="" class="img-md-fluid">
                                     </div>
-                                    <div class="course-info px-3">
+                                    <div class="course-info px-3 py-4">
                                         <div class="course-title">
                                             <h4>Motion Graphics</h4>
                                         </div>
@@ -300,7 +303,9 @@
                 <div class="row">
                     <div class="col-12 col-md-4 col-lg-5">
                         <div class="elearimgarea">
-                            <img src="images/working.png" alt="images area" class="img-md-fluid">
+                            <img src="images/working.png" alt="images area" class="d-none d-lg-block">
+                            <img src="images/workingtab.png" alt="images area" class=" d-none d-sm-none d-md-block d-lg-none">
+                            <img src="images/workingm.png" alt="images area" class="img-fluid d-block d-md-none d-lg-none">
                         </div>
                     </div>
                     <div class="col-12 col-md-8 col-lg-7 elear-info align-items-center d-flex">
@@ -357,8 +362,8 @@
             <div class="container">
                 <div class="row">
                     <div class="bg-accent border border-1 rounded-1">
-                        <div class="d-flex p-5 justify-content-between align-items-center">
-                            <div class="info-area col-md-6">
+                        <div class="d-flex flex-column flex-md-row p-3 p-md-5 justify-content-between align-items-center">
+                            <div class="info-area col-lg-6 col-md-8">
                                 <div class="section-title">
                                     <h2>Ready to join?</h2>
                                 </div>
@@ -438,7 +443,7 @@
         </section>
         <!-- end our Student Sec  -->
         <!-- Start Feedback Section  -->
-        <section class="feedbacksec mb-130">
+        <section class="feedbacksec">
             <div class="container">
                 <div class="row text-center mb-4">
                     <div class="col-lg-7 mx-auto">
@@ -742,6 +747,29 @@
             </div>
         </section>
         <!-- End FAQ Section  -->
+        <!-- Start Compnay logo Section  -->
+        <section class="companyclientsec d-none d-lg-block mb-130">
+            <div class="container">
+                <div class="row text-center mb-5">
+                    <div class="col-lg-8 mx-auto">
+                        <div class="section-title mb-3">
+                            <h2>Trusted by over 800+ companies</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="client-logo"><img src="images/company/company-1.png" alt="" class="img-fluid"></div>
+                        <div class="client-logo"><img src="images/company/company-2.png" alt="" class="img-fluid"></div>
+                        <div class="client-logo"><img src="images/company/company-3.png" alt="" class="img-fluid"></div>
+                        <div class="client-logo"><img src="images/company/company-4.png" alt="" class="img-fluid"></div>
+                        <div class="client-logo"><img src="images/company/company-5.png" alt="" class="img-fluid"></div>
+                        <div class="client-logo"><img src="images/company/company-6.png" alt="" class="img-fluid"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Compnay logo Section  -->
     </main>
     <!-- Start footer -->
     <footer class="bg-dark text-white py-5">
@@ -753,7 +781,7 @@
                 <div class="copywrite-text py-3">
                     <p>Office 41, Zawaya Buildin, Ghala Muscat,
                         Sultanate of Oman</p>
-                    <p>Copyright © 2020
+                    <p>Copyright © 2022
                         <a href="#" class="cpy-link">Learn With Kabir</a> </p>
                     <p>All rights reserved</p>
                 </div>
