update star icon

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                                                 <li><i class="fas fa-star fa-sm"></i></li>
                                                 <li><i class="fas fa-star fa-sm"></i></li>
                                                 <li><i class="fas fa-star fa-sm"></i></li>
-                                                <li><i class="fas fa-star fa-sm"></i></li>
+                                                <li><i class="fas fa-star-half-stroke fa-sm"></i></li>
                                             </ul>
                                         </div>
                                         <p class="text-muted">
@@ -635,7 +635,7 @@
                                                 <li><i class="fas fa-star fa-sm"></i></li>
                                                 <li><i class="fas fa-star fa-sm"></i></li>
                                                 <li><i class="fas fa-star fa-sm"></i></li>
-                                                <li><i class="fas fa-star fa-sm"></i></li>
+                                                <li><i class="fas fa-star-half-stroke fa-sm"></i></li>
                                             </ul>
                                         </div>
                                         <p class="text-muted">
