update hero carousal

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="carousel-item active">
                                 <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                                 <div class="carousel-caption col-10 col-md-8 col-lg-6 mx-auto  ">
-                                    <h5>Get Started with CSS Frameworks</h5>
+                                    <h5>Get Started with Frameworks</h5>
                                     <p>Top CSS Frameworks offer lots of advantages like speeding up your development
                                         process, better cross-browser functionality and More.</p>
 
