--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
                             <h2>Discover Our Popular Courses</h2>
                         </div>
                         <div class="section-info accent-text">
-                            <p>It is a long established fact that a reader will be distracted by the readable content of
-                                a page when looking at its layout.</p>
+                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward.</p>
                         </div>
                     </div>
                 </div>
@@ -146,7 +145,7 @@
                 <div class="course-list-area">
                     <div class="row">
                         <!-- course info area -->
-                        <div class="col-lg-6 col-md-12">
+                        <div class="col-lg-12 col-md-12 col-xl-6">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
@@ -158,8 +157,7 @@
                                         <div class="course-title">
                                             <h4>Fundamental Of UI/UX Design</h4>
                                         </div>
-                                        <p>Some quick example text to build on the card title and make up the bulk of
-                                            the card.</p>
+                                        <p>Organically grow the holistic world view of disruptive innovation via workplace.</p>
                                         <div class="price ">
                                             <p class="font-accent-color">Price : 20$</p>
                                         </div>
@@ -169,7 +167,7 @@
                         </div>
                         <!--end course info area -->
                         <!-- course info area -->
-                        <div class="col-lg-6 col-md-12">
+                        <div class="col-lg-12 col-md-12 col-xl-6" >
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
@@ -195,7 +193,7 @@
                     </div>
                     <div class="row">
                         <!-- course info area -->
-                        <div class="col-lg-6 col-md-12">
+                        <div class="col-lg-12 col-md-12 col-xl-6" >
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
@@ -207,8 +205,7 @@
                                         <div class="course-title">
                                             <h4>Fullstack Web Development</h4>
                                         </div>
-                                        <p>Some quick example text to build on the card title and make up the bulk of
-                                            the card.</p>
+                                        <p>Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion.</p>
                                         <div class="price ">
                                             <p class="font-accent-color">Price : 20$</p>
                                         </div>
@@ -218,7 +215,7 @@
                         </div>
                         <!--end course info area -->
                         <!-- course info area -->
-                        <div class="col-lg-6 d-none d-lg-block">
+                        <div class="col-lg-12 d-none d-lg-block col-xl-6">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
@@ -243,7 +240,7 @@
 
                     <div class="row">
                         <!-- course info area -->
-                        <div class="col-lg-6 d-none d-lg-block">
+                        <div class="col-lg-12 d-none d-lg-block col-xl-6">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
@@ -265,7 +262,7 @@
                         </div>
                         <!--end course info area -->
                         <!-- course info area -->
-                        <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                        <div class="col-lg-12 col-md-12 d-none d-lg-block col-xl-6">
                             <div class="d-flex">
                                 <div
                                     class="course-area d-flex flex-column flex-md-row align-items-center rounded-4 m-2 border border-1">
@@ -778,7 +775,7 @@
                 <div class="fo-title py-3">
                     <h3>Learn With Kabir</h3>
                 </div>
-                <div class="copywrite-text py-3">
+                <div class="copywrite-text py-3 text-white">
                     <p>Office 41, Zawaya Buildin, Ghala Muscat,
                         Sultanate of Oman</p>
                     <p>Copyright © 2022
